--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@
 #Ignore vim temporary files
 *.sw*
 
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
